# LibTorchTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  draw.bat  generate.bat  graph.txt
runs/run1/: tfevents.07-03-2022.19-25-27.run1
runs/run2/: tfevents.07-03-2022.19-26-26.run2  tfevents.07-03-2022.19-30-13.run2
runs/run3/: tfevents.07-03-2022.19-31-45.run3  tfevents.07-03-2022.19-32-34.run3  tfevents.07-03-2022.19-33-45.run3
runs/run4/: tfevents.07-03-2022.19-35-50.run4  tfevents.07-03-2022.19-37-41.run4
runs/run5/: tfevents.07-03-2022.20-01-03.run5
runs/sine/: tfevents.sine
script/: draw.py
src/: TBFGenerator.h  main.cpp
